--- a/views/assets/css/styles.css
+++ b/views/assets/css/styles.css
@@ -1,15 +1,5 @@
 @charset "UTF-8";
-/*!
-* Start Bootstrap - SB Admin v7.0.2 (https://startbootstrap.com/template/sb-admin)
-* Copyright 2013-2021 Start Bootstrap
-* Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-sb-admin/blob/master/LICENSE)
-*/
-/*!
- * Bootstrap v5.0.2 (https://getbootstrap.com/)
- * Copyright 2011-2021 The Bootstrap Authors
- * Copyright 2011-2021 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
- */
+
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -65,10 +55,7 @@ li
 {
     list-style: none;
 }
-a
-{
-    text-decoration: none;
-}
+
 body {
   margin: 0;
   font-family: var(--bs-font-sans-serif);
@@ -167,8 +154,13 @@ address {
   line-height: inherit;
 }
 
+a{
+  text-decoration: none;
+}
+
 ol,
 ul {
+  
   padding-left: 2rem;
 }
 
@@ -230,8 +222,8 @@ sup {
 }
 
 a {
-  color: #0d6efd;
-  text-decoration: underline;
+  color: #000000;
+  text-decoration: none;
 }
 a:hover {
   color: #0a58ca;
